--- a/.gitignore
+++ b/.gitignore
@@ -5,9 +5,24 @@ app/bootstrap*
 vendor/*
 */logs/*
 */cache/*
+web/css/*
+web/js/*
+web/admin/css/*
+web/admin/js/*
 web/uploads/*
 web/bundles/*
+web/media/*
+/composer.lock
 
 # Configuration files
 app/config/parameters.ini
 app/config/parameters.yml
+
+# eclipse
+.externalToolBuilders
+.settings
+.buildpath
+.project
+
+#Others
+.DS_Store
