--- a/hyundai/composer.json
+++ b/hyundai/composer.json
@@ -11,14 +11,17 @@
         "symfony/symfony": "2.3.*",
         "doctrine/orm": ">=2.2.3,<2.4-dev",
         "doctrine/doctrine-bundle": "1.2.*",
-        "twig/extensions": "1.0.*",
+        "doctrine/doctrine-fixtures-bundle" : "*",
+		"twig/extensions" : "1.*",
         "symfony/assetic-bundle": "2.3.*",
         "symfony/swiftmailer-bundle": "2.3.*",
         "symfony/monolog-bundle": "2.3.*",
         "sensio/distribution-bundle": "2.3.*",
         "sensio/framework-extra-bundle": "2.3.*",
         "sensio/generator-bundle": "2.3.*",
-        "incenteev/composer-parameter-handler": "~2.0"
+        "incenteev/composer-parameter-handler": "~2.0",
+        "fzaninotto/faker" : "1.2.*",
+        "raulfraile/ladybug-bundle" : "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
