--- a/hyundai/src/Hyundai/KromaBundle/Resources/config/services.yml
+++ b/hyundai/src/Hyundai/KromaBundle/Resources/config/services.yml
@@ -2,6 +2,20 @@ parameters:
 #    hyundai_kroma.example.class: Hyundai\KromaBundle\Example
 
 services:
-#    hyundai_kroma.example:
-#        class: %hyundai_kroma.example.class%
-#        arguments: [@service_id, "plain_value", %parameter%]
+    hyundai_kroma.backend.menu_builder:
+        class: Hyundai\KromaBundle\Menu\BackendMenuBuilder
+        arguments: ["@knp_menu.factory"]
+        
+    hyundai_kroma.backend.menu.main:
+        class: Knp\Menu\MenuItem # the service definition requires setting the class
+        factory_service: hyundai_kroma.backend.menu_builder
+        factory_method: createMainMenu
+        arguments: ["@request"]
+        scope: request # needed as we have the request as a dependency here
+        tags:
+            - { name: knp_menu.menu, alias: backend_main_menu } # The alias is what is used to retrieve the menu
+            
+    hyundai.form.type.post:
+        class: Hyundai\KromaBundle\Form\Type\PostType
+        tags:
+            - { name: form.type, alias: hyundai_post }
