--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -1,39 +1,50 @@
 security:
     encoders:
-        Symfony\Component\Security\Core\User\User: plaintext
-
-    role_hierarchy:
-        ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        FOS\UserBundle\Model\UserInterface: sha512
 
     providers:
-        in_memory:
-            memory:
-                users:
-                    user:  { password: userpass, roles: [ 'ROLE_USER' ] }
-                    admin: { password: adminpass, roles: [ 'ROLE_ADMIN' ] }
+        fos_userbundle:
+            id: fos_user.user_provider.username
 
     firewalls:
         dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
-            security: false
-
-        login:
-            pattern:  ^/demo/secured/login$
-            security: false
-
-        secured_area:
-            pattern:    ^/demo/secured/
+            pattern:    ^/(_profiler|_wdt|css|js)
+            security:   false
+                    
+        admin:
+            pattern: /admin.*
             form_login:
-                check_path: _security_check
-                login_path: _demo_login
+                provider: fos_userbundle
+                login_path: /admin/login
+                check_path: /admin/login_check
+                default_target_path: /admin/dashboard
+                use_referer: true
             logout:
-                path:   _demo_logout
-                target: _demo
-            #anonymous: ~
-            #http_basic:
-            #    realm: "Secured Demo Area"
-
+                path: /admin/logout
+                target: /admin/login
+            anonymous: true
+            context:   hyundai_admin
+            
+        main:
+            pattern: /.*
+            form_login:
+                provider: fos_userbundle
+                login_path: /login
+                check_path: /login_check
+                default_target_path: /
+                use_referer: true
+            logout:
+                path: /logout
+                target: /login
+            anonymous: true
+            context:   hyundai
+            
     access_control:
-        - { path: ^/demo/secured/hello/admin/, roles: ROLE_ADMIN }
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
+        - { path: ^/admin/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/login_check$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin/css.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/admin.*, role: ROLE_ADMIN }
+        
+        - { path: ^/media.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/login.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/.*, role: ROLE_USER }
