--- a/composer.json
+++ b/composer.json
@@ -23,7 +23,8 @@
         "fzaninotto/faker" : "1.2.*",
         "sylius/resource-bundle" : "0.5.*",
 		"raulfraile/ladybug-bundle" : "dev-master",
-		"knplabs/knp-menu-bundle" : "1.*"
+		"knplabs/knp-menu-bundle" : "1.*",
+		"friendsofsymfony/user-bundle" : "~1.3"
     },
     "scripts": {
         "post-install-cmd": [
