--- a/src/Gecko/BackendBundle/Resources/config/routing/main.yml
+++ b/src/Gecko/BackendBundle/Resources/config/routing/main.yml
@@ -1,3 +1,6 @@
+fos_user_security:
+    resource: "@FOSUserBundle/Resources/config/routing/security.xml"
+
 gecko_backend_index:
     pattern: /
     defaults:
@@ -13,5 +16,5 @@ gecko_backend_dashboard:
 #    resource: @SyliusWebBundle/Resources/config/routing/backend/settings.yml
 #    prefix: /settings
 
-gecko_backend_security:
-    resource: @GeckoBackendBundle/Resources/config/routing/security.yml
+#gecko_backend_security:
+#    resource: @GeckoBackendBundle/Resources/config/routing/security.yml
