--- a/composer.json
+++ b/composer.json
@@ -24,7 +24,10 @@
         "sylius/resource-bundle" : "0.5.*",
 		"raulfraile/ladybug-bundle" : "dev-master",
 		"knplabs/knp-menu-bundle" : "1.*",
-		"friendsofsymfony/user-bundle" : "~1.3"
+		"friendsofsymfony/user-bundle" : "~1.3",
+        "sonata-project/media-bundle": "dev-master",
+        "sonata-project/doctrine-orm-admin-bundle": "dev-master",
+        "sonata-project/core-bundle": "dev-master"
     },
     "scripts": {
         "post-install-cmd": [
