--- a/src/Hyundai/KromaBundle/Resources/config/services.yml
+++ b/src/Hyundai/KromaBundle/Resources/config/services.yml
@@ -20,6 +20,11 @@ services:
         tags:
             - { name: form.type, alias: hyundai_brand }
             
+    hyundai.form.type.brandresource:
+        class: Hyundai\KromaBundle\Form\Type\BrandResourceType
+        tags:
+            - { name: form.type, alias: hyundai_brandresource }
+            
     hyundai.form.type.user:
         class: Hyundai\KromaBundle\Form\Type\UserType
         tags:
