--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -68,6 +68,39 @@ swiftmailer:
     password:  "%mailer_password%"
     spool:     { type: memory }
 
+knp_gaufrette:
+    stream_wrapper: ~
+    adapters:
+        gecko_resources:
+            local:
+                directory:  %kernel.root_dir%/../web/media/resources
+                create:     true
+    filesystems:
+        gecko_resources_fs:
+            adapter: gecko_resources
+
+vich_uploader:
+    db_driver: orm # or mongodb
+    gaufrette: true
+    storage:   vich_uploader.storage.gaufrette
+    mappings:
+        resources:
+            uri_prefix:         /resources
+            upload_destination: gecko_resources_fs
+            delete_on_remove:   true
+            delete_on_update:   true
+            namer:              vich_uploader.namer_uniqid
+            
+liip_imagine:
+    data_root: %kernel.root_dir%/../web/media/resources
+    filter_sets:
+        gecko_image_90x60:
+            filters:
+                thumbnail: { size: [90, 60], mode: outbound }
+        gecko_gallery:
+            filters:
+                thumbnail: { size: [250, 250], mode: outbound }
+
 sylius_resource:
     resources:
         hyundai.brand:
