--- a/composer.json
+++ b/composer.json
@@ -24,6 +24,10 @@
         "sylius/resource-bundle" : "0.5.*",
 		"raulfraile/ladybug-bundle" : "dev-master",
 		"knplabs/knp-menu-bundle" : "1.*",
+        "knplabs/gaufrette" : "dev-master",
+		"knplabs/knp-gaufrette-bundle" : "dev-master",
+		"vich/uploader-bundle": "dev-master",
+		"liip/imagine-bundle" : "~0.9",
 		"friendsofsymfony/user-bundle" : "~1.3"
     },
     "scripts": {
