--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -29,4 +29,8 @@ security:
         - { path: ^/media.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
         - { path: ^/login.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
 #        - { path: ^/admin/js.*, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/brands_user.*, role: [ROLE_USER] }
+        - { path: ^/category.*, role: [ROLE_ADMIN] }
+        - { path: ^/brands.*, role: [ROLE_ADMIN] }
+        - { path: ^/user.*, role: [ROLE_ADMIN] }
         - { path: ^/.*, role: [ROLE_USER, ROLE_ADMIN] }
