disable dashboard view

--- a/src/Hyundai/KromaBundle/Resources/config/routing/frontend/main.yml
+++ b/src/Hyundai/KromaBundle/Resources/config/routing/frontend/main.yml
@@ -1,9 +1,6 @@
 hyundai_kroma_index:
     pattern: /
-    defaults:
-        _controller: FrameworkBundle:Redirect:redirect
-        route: hyundai_kroma_dashboard
-        permanent: true
+    defaults: { _controller: HyundaiKromaBundle:Frontend/Main:redirectIndexUser }
     
 hyundai_kroma_dashboard:
     pattern: /dashboard
