--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -116,6 +116,10 @@ sylius_resource:
             driver: doctrine/orm
             classes:
                 model: Hyundai\KromaBundle\Entity\BrandResource
+        hyundai.brandresourcefile:
+            driver: doctrine/orm
+            classes:
+                model: Hyundai\KromaBundle\Entity\BrandResourceFile
         hyundai.user:
             driver: doctrine/orm
             classes:
