--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -120,6 +120,7 @@ sylius_resource:
             driver: doctrine/orm
             classes:
                 model: Hyundai\KromaBundle\Entity\BrandResourceFile
+                controller: Hyundai\KromaBundle\Controller\Frontend\BrandResourceFileController
         hyundai.user:
             driver: doctrine/orm
             classes:
