--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -81,8 +81,7 @@ knp_gaufrette:
 
 vich_uploader:
     db_driver: orm # or mongodb
-    gaufrette: true
-    storage:   vich_uploader.storage.gaufrette
+    storage:   gaufrette
     mappings:
         resources:
             uri_prefix:         /resources
