--- a/composer.json
+++ b/composer.json
@@ -14,6 +14,7 @@
 		"doctrine/orm" : ">=2.2.3,<2.4-dev",
 		"doctrine/doctrine-bundle" : "1.2.*",
 		"doctrine/doctrine-fixtures-bundle" : "*",
+		"stof/doctrine-extensions-bundle": "1.1.*",
 		"twig/extensions" : "1.*",
 		"symfony/assetic-bundle" : "2.3.*",
 		"symfony/swiftmailer-bundle" : "2.3.*",
